--- a/shared/package.json
+++ b/shared/package.json
@@ -159,6 +159,7 @@
     "@babel/polyfill": "^7.12.1",
     "react-dom": "^18.1.0",
     "react-native-reanimated": "^2.8.0",
-    "react-native-web": "^0.17.7"
+    "react-native-web": "^0.17.7",
+    "redux-micro-frontend": "^1.3.0"
   }
 }
