--- a/banking/package.json
+++ b/banking/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-reanimated": "^2.8.0"
+    "react-native-reanimated": "^2.8.0",
+    "redux-micro-frontend": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
