--- a/host/package.json
+++ b/host/package.json
@@ -15,12 +15,15 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
+    "@reduxjs/toolkit": "^1.8.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
     "redux-micro-frontend": "^1.3.0",
     "superdyno-shared": "file:../shared"
   },
