--- a/banking/package.json
+++ b/banking/package.json
@@ -6,7 +6,7 @@
     "clear:pod": "cd ios && pod deintegrate && pod setup && pod install",
     "android": "react-native run-android --no-packager",
     "ios": "react-native run-ios --no-packager",
-    "start:metro": "react-native webpack-start",
+    "start:metro": "STANDALONE=1 react-native webpack-start --port 8081",
     "start": "react-native webpack-start --port 9091",
     "bundle": "react-native webpack-bundle --platform ios --entry-file index.js --bundle-output ./dist/index.bundle --dev=false",
     "webpack": "PLATFORM=ios webpack -c webpack.config.js",
